[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 579, 10 )

[node name="Node2D" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 217, -36 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.5, -1 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 523, 587 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 527, 583 )
scale = Vector2( 16.5313, 0.140625 )
texture = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 405.0
margin_top = 17.0
margin_right = 956.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 814.0
margin_top = 231.0
margin_right = 903.0
margin_bottom = 314.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 811.0
margin_top = 23.0
margin_right = 901.0
margin_bottom = 105.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 812.0
margin_top = 127.0
margin_right = 900.0
margin_bottom = 206.0
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 442.0
margin_top = 36.0
margin_right = 773.0
margin_bottom = 313.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="KinematicBody2D" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="KinematicBody2D" method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="KinematicBody2D" method="_on_Button3_pressed"]
